--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: java
 jdk:
   - openjdk8
+
+script: "mvn cobertura:cobertura"
+
+after_success:
+- bash <(curl -s https://codecov.io/bash) -t 28eee6b1-d1e9-4ce0-9c7c-9edb0886a242
+- echo "Hello there! Everything are ok!"
